# CursoCpp

./: .gitignore
Clase1/: clase1.tex
Clase2/: clase2.tex
Clase3/: clase3.tex
Clase4/: clase4.tex
codigo/base/: CMakeLists.txt
codigo/base/src/: base.cpp
codigo/sdl/: CMakeLists.txt  leeme.txt
codigo/sdl/src/: dibujar.cpp  dibujar.h  eventos.cpp  eventos.h  main.cpp  sdl.cpp  sdl.h
codigo/test/: CMakeLists.txt
codigo/tinyXML/: CMakeLists.txt  leeme.txt
codigo/tinyXML/src/: dump.cpp  dump.h  main.cpp
trabajos/Clase1/: trabajo.txt
trabajos/Clase2/: trabajo.txt
trabajos/Clase3/: trabajo3.txt
trabajos/Clase4/: trabajo.txt
trabajos/Final/: proyectos.txt
